# currency-cmake-cpp

./: .gitignore  CMakeLists.txt  README.md
lib/curl/MSVC/Release/: libcurl.lib
src/: CMakeLists.txt  application.cpp  application.hpp  currency-cmake-cpp.cpp  main.cpp  reader.cpp  reader.hpp  ui.cpp  ui.hpp
test/: CMakeLists.txt  test.cpp
